Bug 467945 - Shapes: converting nodes to corner/smooth/symmetric works only in the last opened document
Summary: Shapes: converting nodes to corner/smooth/symmetric works only in the last op...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: 5.1.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-29 20:59 UTC by Frann
Modified: 2023-06-19 09:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frann 2023-03-29 20:59:40 UTC
SUMMARY
With more than one document opened, converting nodes to corner/smooth/symmetric works only in the document that was opened last.

STEPS TO REPRODUCE
1. Open a file containing a vector layer and a shape (file A).
2. Open another file or create a new one (file B).
3. Go back to file A and try to convert a node to corner, smooth, or symmetric.

OBSERVED RESULT
- The node conversion to corner, smooth or symmetric doesn't work anymore in file A.
- Closing file B does not fix this.
- To have node conversion work again in file A, it has to be closed the reopened. 

SOFTWARE/OS VERSIONS
Linux Mint 20.3 Cinnamon
Comment 1 Ahab Greybeard 2023-03-30 02:49:39 UTC
I can confirm this bug for the 5.1.5 and the 29 Mar 5.2.0 prealpha (git 0e505556f4) appimages on Debian 10.
Comment 2 Bug Janitor Service 2023-06-15 22:35:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1826
Comment 3 Dmitry Kazakov 2023-06-19 09:04:51 UTC
Git commit 513041f2ec2babaaa045ca8263e51bfbebe111c2 by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 19/06/2023 at 09:03.
Pushed by dkazakov into branch 'master'.

Fix Edit Shapes actions in multiple documents

The change point to corner/smooth/symmetric actions
would only work on the most recently opened document,
because they could only be part of one QActionGroup at a time.
So remove the QActionGroup.

M  +18   -22   libs/flake/tools/KoPathTool.cpp
M  +5    -3    libs/flake/tools/KoPathTool.h

https://invent.kde.org/graphics/krita/-/commit/513041f2ec2babaaa045ca8263e51bfbebe111c2