Fix Edit Shapes actions in multiple documents

The change point to corner/smooth/symmetric actions
would only work on the most recently opened document,
because they could only be part of one QActionGroup at a time.
So remove the QActionGroup.

BUG:467945